--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -307,7 +307,8 @@ h3 {
   display: inline-block;
   transform: translateZ(1px);
 }
-.lds-circle > div img {
+
+.lds-circle>div img {
   display: inline-block;
   width: 90px;
   height: 90px;
@@ -316,17 +317,23 @@ h3 {
   background: #fff;
   animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
+
 @keyframes lds-circle {
-  0%, 100% {
+
+  0%,
+  100% {
     animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
   }
+
   0% {
     transform: rotateY(0deg);
   }
+
   50% {
     transform: rotateY(1800deg);
     animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
   }
+
   100% {
     transform: rotateY(3600deg);
   }
@@ -363,24 +370,24 @@ h3 {
   }
 
   .regLog {
-  width: 150px;
-  margin: 0 auto;
-  margin-right: 33%;
-}
+    width: 150px;
+    margin: 0 auto;
+    margin-right: 33%;
+  }
 
   .avielInfo {
-  margin-top: 5%;
-  margin-right: -1%;
-}
+    margin-top: 5%;
+    margin-right: -1%;
+  }
 
   .staffName {
-  margin-left: 10%;
-  margin-right: 22%;
-  width: 250px;
-  height: 250px;
-  display: inline-flex;
-  margin-bottom: 70px;
-}
+    margin-left: 10%;
+    margin-right: 22%;
+    width: 250px;
+    height: 250px;
+    display: inline-flex;
+    margin-bottom: 70px;
+  }
 
   .table {
     border-radius: 5px;
@@ -392,15 +399,15 @@ h3 {
   }
 
   .newMessage {
-  background-color: rgba(255, 255, 255, 0.4);
-  width: 180px;
-  margin-right: 25%;
-}
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 180px;
+    margin-right: 25%;
+  }
 
 }
 
 @media (max-width: 426px) {
-  
+
   .newReview {
     background-color: rgba(255, 255, 255, 0.4);
     width: 180px;
@@ -409,65 +416,65 @@ h3 {
 
   .links {
     margin-left: -1%;
-}
+  }
 
 
-#about{
- margin-left: 16%;
-}
+  #about {
+    margin-left: 16%;
+  }
 
-#info{
-  margin-left: 16%;
- }
+  #info {
+    margin-left: 16%;
+  }
 
- .slider {
-  margin-top: 6%;
-  width: 70%;
-  height: 40vh;
-  display: flex;
-  overflow: hidden;
-  margin-left: 15%;
-}
+  .slider {
+    margin-top: 6%;
+    width: 70%;
+    height: 40vh;
+    display: flex;
+    overflow: hidden;
+    margin-left: 15%;
+  }
 
-.regLog {
-  width: 150px;
-  margin: 0 auto;
-  margin-right: 33%;
-}
+  .regLog {
+    width: 150px;
+    margin: 0 auto;
+    margin-right: 33%;
+  }
 
-.avielInfo {
-  margin-top: 5%;
-  margin-right: 1%;
-}
+  .avielInfo {
+    margin-top: 5%;
+    margin-right: 1%;
+  }
 
-.staffName {
-  margin-left: 10%;
-  margin-right: 22%;
-  width: 250px;
-  height: 250px;
-  display: inline-flex;
-  margin-bottom: 70px;
-}
+  .staffName {
+    margin-left: 10%;
+    margin-right: 22%;
+    width: 250px;
+    height: 250px;
+    display: inline-flex;
+    margin-bottom: 70px;
+  }
 
-.table {
-  border-radius: 5px;
-  font-size: 12px;
-  font-weight: normal;
-  margin-left: 20%;
-  margin-top: 7%;
-  width: 150px;
-}
+  .table {
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
+    margin-left: 20%;
+    margin-top: 7%;
+    width: 150px;
+  }
 
-.newMessage {
-  background-color: rgba(255, 255, 255, 0.4);
-  width: 180px;
-  margin-right: 28%;
-}
-  
+  .newMessage {
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 180px;
+    margin-right: 28%;
+  }
+
 }
 
 @media (min-width: 768px) and (max-width: 769px) {
-  
+
   .newReview {
     background-color: rgba(255, 255, 255, 0.4);
     width: 180px;
@@ -475,34 +482,34 @@ h3 {
   }
 
 
-.regLog {
-  width: 150px;
-  margin: 0 auto;
-  margin-right: 41%;
-}
+  .regLog {
+    width: 150px;
+    margin: 0 auto;
+    margin-right: 41%;
+  }
 
 
-.table {
-  border-radius: 5px;
-  font-size: 12px;
-  font-weight: normal;
-  margin-left: 8%;
-  margin-top: 7%;
-}
+  .table {
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
+    margin-left: 8%;
+    margin-top: 7%;
+  }
 
-.newMessage {
-  background-color: rgba(255, 255, 255, 0.4);
-  width: 180px;
-  margin-right: 36%;
-}
+  .newMessage {
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 180px;
+    margin-right: 36%;
+  }
 
-.slider {
-  margin-top: 6%;
-  width: 49%;
-  height: 40vh;
-  display: flex;
-  overflow: hidden;
-  margin-left: 28%;
-}
-  
+  .slider {
+    margin-top: 6%;
+    width: 49%;
+    height: 40vh;
+    display: flex;
+    overflow: hidden;
+    margin-left: 28%;
+  }
+
 }
